# fastagent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: competitive-analysis.md  decorators.md  discoverability.md  github-settings.md  llm-providers.md  memory.md
examples/: 01_memory_agent.py  02_workflow.py  03_loop.py  04_tool.py  05_structured.py
fastagent/: __init__.py  core.py  llm.py  memory.py  utils.py
skill/: SKILL.md
skill/references/: bootstrap-pattern.md  decorator-cheatsheet.md  llm-providers.md  memory-deep-dive.md
skill/scripts/: install.py  memory_dump.py  scaffold.py  verify.py
skill/templates/: Dockerfile  agent_with_memory.py  hello.py  loop.py  requirements.txt  structured.py  workflow.py
tests/: conftest.py  test_fastagent.py  test_fastagent_v2.py
