[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastagent"
version = "0.1.0"
description = "Decorator-driven AI & memory framework with plug-and-play agents, workflows, and loops."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "FastAgent"}]
keywords = ["ai", "agents", "memory", "vector-search", "framework", "decorators"]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
ollama = ["httpx>=0.27"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://example.local/fastagent"

[project.scripts]
fastagent-demo = "app:run_demo"

[tool.setuptools]
packages = ["fastagent"]

[tool.setuptools.package-data]
fastagent = ["py.typed"]
